--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "animejs": "^3.2.2",
     "cannon-es-debugger": "^1.0.0",
     "three": "^0.169.0",
     "three-bvh-csg": "^0.0.16",
